<resources>
  <string name="app_name" translatable="false">Space Agency Toolkit</string>
  <string name="app_ver" translatable="false">%s ver. %s\n%s</string>
  <string name="app_years" translatable="false">2018 &#8211; 2019</string>
  <string name="moduleName_sbxConverter" translatable="false">SASBX Encryptor - Decryptor</string>
  <string name="actLabel_texConverter">Конвертер текстур</string>
  <string name="actLabel_soundConverter">Конвертер звуков</string>
  <string name="actLabel_filePicker">Выбор файла</string>
  <string name="actLabel_dirPicker">Выбор каталога</string>
  <string name="actLabel_pickModule">Выбор модуля</string>
  <string name="valueBar_ratio" translatable="false">%.2f</string>
  <string name="valueBar_percentage" translatable="false">%d%%</string>
  <string name="valueBar_valueFloat" translatable="false">%.1f / %.0f</string>
  <string name="valueBar_valueInteger" translatable="false">%d / %d</string>
  <string name="sbxDefaultName" translatable="false">My Sandbox</string>
  <string name="NA" translatable="false">N/A</string>
  <string name="valueDegrees" translatable="false">&#176;</string>
  <string name="valuePercent" translatable="false">%</string>
  <string name="valueNCU" translatable="false">NCU</string>
  <string name="valueDots" translatable="false">pt</string>
  <string name="defaultValue">По умолчанию</string>
  <string name="dialogButtonOk" translatable="false">OK</string>
  <string name="dialogButtonCancel">Отмена</string>
  <string name="dialogButtonNow">Только сейчас</string>
  <string name="dialogButtonAlways">Всегда</string>
  <string name="dialogButtonSave">Сохранить</string>
  <string name="dialogButtonEdit">Редактировать</string>
  <string name="dialogButtonExit">Выход</string>
  <string name="dialogButtonStat">Статистика</string>
  <string name="slashDivider" translatable="false">/</string>
  <string name="positionX" translatable="false">X:</string>
  <string name="positionY" translatable="false">Y:</string>
  <string name="sbxShortInfo">Объектов: %d, Маркеров: %d</string>
  <string name="longTimeAgo">Очень давно</string>
  <string name="distanceTo_M">%.2fM до %s</string>
  <string name="distanceTo_K">%.2fK до %s</string>
  <string name="distanceTo_U">%.2f до %s</string>
  <string name="colonyNear">Колония около %s</string>
  <string name="diaTitle_warning">Внимание</string>
  <string name="downloadingStarted">Загрузка начата</string>
  <string name="noAskMore">Больше не спрашивать</string>
  <string name="needDB">Требуется БД</string>
  <string name="downloadAgain">Скачать заново</string>
  <string name="notUse">Не использовать</string>
  <string name="continueAnyway">Все равно продолжить</string>
  <string name="oops">Что-то пошло не так…</string>
  <string name="restartRequired">Для применения настройки перезапустите приложение</string>
  <string name="diaTitle_useInternalExplorer">Используйте встроенный файловый менеджер</string>
  <string name="diaMsg_useInternalExplorer">Обнаружено множество неудачных попыток загрузить файл из внешнего файлового менеджера. Хотите использовать по умолчанию встроенный?</string>
  <string name="saveBeforeExit">Sandbox содержит несохраненные изменения. Сохранить их?</string>
  <string name="unsupportedScheme">Не удалось загрузить файл.\nПопробуйте использовать другой файловый менеджер</string>
  <string name="diaTitle_sendFailure">Не найдено ни одного приложения, способного сохранить/отправить Sandbox. Использовать встроенный файловый менеджер для выбора места сохранения?</string>
  <string name="databaseDamaged">База данных повреждена или несовместима с текущей версией приложения. Вы можете скачать ее заново или отказаться от ее использования.</string>
  <string name="systemErr_cacheDirsNotCreated">Не удалось создать временные каталоги. Возможно на устройстве недостаточно свободного места. Попробуйте освободить место и перезапустить приложение.</string>
  <string name="externalNotFound_fileManager">Не найдено ни одного внешнего файлового менеджера</string>
  <string name="externalNotFound_textEditor">Не найдено ни одного внешнего текстового редактора</string>
  <string name="externalNotFound_spaceAgency">Space Agency не установлена на вашем устройстве</string>
  <string name="actStart_btnText_create">Создать sandbox</string>
  <string name="actStart_btnText_sbxEdit">Редактировать sandbox</string>
  <string name="actStart_btnText_sbxConvert">Шифровать/дешифровать sandbox</string>
  <string name="actStart_btnText_resEdit">Упаковать/распаковать ресурсы</string>
  <string name="createSandbox_tvText_name">Имя sandbox\'а</string>
  <string name="createSandbox_tvText_uid" translatable="false">UID</string>
  <string name="createSandbox_edHint_uid">Для опытных пользователей</string>
  <string name="createSandbox_addStdMarkers">Добавить стандартные маркеры NaviComp</string>
  <string name="sandboxNameIsEmpty">Не указано имя sandbox\'а</string>
  <string name="sandboxNameIncorrect">Некорректное имя sandbox\'а</string>
  <string name="diaTitle_needDB">Требуется база данных модулей</string>
  <string name="diaMsg_needDB">Для полноценного функционирования приложения требуется загрузка базы данных, которая содержит характеристики модулей. Выполнить это действие сейчас? (Это также можно будет сделать позже из настроек приложения)</string>
  <string name="noVersionSelected">Не выбрана версия</string>
  <string name="tvContent_insertPath">Введите стартовый путь:</string>
  <string name="btnText_btnOpenFileExp" translatable="false">…</string>
  <string name="btnText_btnPack">Запаковать</string>
  <string name="btnText_btnUnpack">Распаковать</string>
  <string name="contDesc_preview">Предпросмотр</string>
  <string name="swText_selectMode">Несколько файлов</string>
  <string name="resProcessing_packing">Упаковка…</string>
  <string name="resProcessing_unpacking">Распаковка…</string>
  <string name="resProcessing_packingCnt">Упаковка (%d/%d)…</string>
  <string name="resProcessing_unpackingCnt">Распаковка (%d/%d)…</string>
  <string name="dirPicker_dirUnreadable">Нет доступа в текущий каталог</string>
  <string name="dirPicker_fsRootUnreadable">Не удалось открыть корневой каталог, открываю sdcard</string>
  <string name="tvText_dirPicker_empty">Пусто</string>
  <string name="btnText_dirPicker_back">Назад</string>
  <string name="btnText_dirPicker_go">Выбрать</string>
  <string name="actSbxConv_tvContent_insertPath">Введите полный путь и имя файла:</string>
  <string name="actSbxConv_btnText_btnCompress">Зашифровать</string>
  <string name="actSbxConv_btnText_btnUncompress">Дешифровать</string>
  <string name="actSbxConv_btnText_btnOpenFileExp" translatable="false">…</string>
  <string name="actSbxConv_btnText_btnEdit">Открыть в текстовом редакторе</string>
  <string name="actSbxConv_tvContent_selectVersion">Выберите версию (только для шифрования)</string>
  <string name="actSbxConv_rBtnText_verCode20" translatable="false">v1.4.x</string>
  <string name="actSbxConv_rBtnText_verCode21">v1.5.0 или новее</string>
  <string name="actSbxEdit_section_hide">Скрыть/показать станцию</string>
  <string name="actSbxEdit_hide_hide">Скрыть</string>
  <string name="actSbxEdit_hide_show">Показать</string>
  <string name="actSbxEdit_section_alpha">Изменить прозрачность модулей</string>
  <string name="actSbxEdit_alpha_value">Прозрачность (в %)</string>
  <string name="actSbxEdit_refresh_cargo">Пополнить ресурсы</string>
  <string name="actSbxEdit_refresh_fuel">Пополнить топливо</string>
  <string name="actSbxEdit_extend_fuel">Увеличить емкость топливных баков</string>
  <string name="actSbxEdit_extend_fuel_in">Увеличить в</string>
  <string name="actSbxEdit_extend_fuel_fact">раз(а)</string>
  <string name="actSbxEdit_section_saveId">Изменить save id</string>
  <string name="actSbxEdit_saveId_start">Стартовый save id</string>
  <string name="diaSbxSave_cbText_Overwrite">Перезаписать оригинальный файл</string>
  <string name="diaSbxSave_cbText_Compress">Зашифровать sandbox</string>
  <string name="diaSbxSave_tvContent_selectVersion">Выберите версию:</string>
  <string name="diaAddModule_advanced">Расширенные настройки</string>
  <string name="diaAddText_enterText">Текст</string>
  <string name="diaAddText_enterPosition">Координаты (левый верхний угол)</string>
  <string name="diaAddText_selectAlign">Выравнивание</string>
  <string name="diaAddText_margin">Межсимв. интервал</string>
  <string name="diaOptimize_optSaveId">Оптимизировать SAVE ID</string>
  <string name="diaAddMarker_enterLabel">Название</string>
  <string name="diaAddMarker_enterPosition">Координаты</string>
  <string name="diaAddMarker_enterObjRadius">Радиус объекта</string>
  <string name="diaAddMarker_enterOrbRadius">Радиус обриты</string>
  <string name="diaAddMarker_enterRescaleRadius">Радиус смены масштаба</string>
  <string name="diaAddMarker_enterScale">Коэф. смены масштаба</string>
  <string name="mTitle_actionPartInfo">Сведения о модулях</string>
  <string name="mTitle_actionSbxInfo">Информация о sandbox\'е</string>
  <string name="mTitle_actionNav">Маркеры NaviComp</string>
  <string name="mTitle_actionOptimize">Оптимизировать sandbox</string>
  <string name="mTitle_actionAddObject">Добавить объект</string>
  <string name="mTitle_actionAdd_shuttle">Шаттл</string>
  <string name="mTitle_actionAdd_spy">Спутник-шпион</string>
  <string name="mTitle_actionAdd_module">Другой модуль</string>
  <string name="mTitle_actionAdd_colony">Колонию</string>
  <string name="mTitle_actionAdd_text">Текст</string>
  <string name="mTitle_actionAdd_all">Все модули</string>
  <string name="mTitle_actionAdd_allFont">Весь пиксельный шрифт</string>
  <string name="mTitle_actionSave">Сохранить Sandbox</string>
  <string name="mTitle_actionPlay">Запустить Sandbox</string>
  <string name="mTitle_actionDevTools">Инструменты разработчика</string>
  <string name="mTitle_actionFuelInfo">Информация о топливе</string>
  <string name="mTitle_actionAdd">Добавить</string>
  <string name="mTitle_actionAddStdMarker">Стандартный маркер</string>
  <string name="mTitle_actionAddAllMarkers">Все стандартные маркеры</string>
  <string name="mTitle_actionAddCustomMarker">Кастомный маркер</string>
  <string name="prefCategory_sbxConverter" translatable="false">@string/moduleName_sbxConverter</string>
  <string name="prefCategory_resConverter">Конвертер ресурсов</string>
  <string name="prefCategory_sbxEditor">Редактор sandbox\'ов</string>
  <string name="prefCategory_general">Общее</string>
  <string name="prefTitle_requestRoot">Запрашивать Root-доступ</string>
  <string name="prefSummary_requestRoot">Позволяет работать с файлами во внутренних каталогах игры</string>
  <string name="pTitle_saveOriginalFiles">Сохранять исходные файлы</string>
  <string name="pSummary_saveOriginalFiles">Не удалять оригинальные файлы при упаковке/распаковке</string>
  <string name="pTitle_internalExplorer">Встроенный файловый менеджер</string>
  <string name="pSummary_internalExplorer">Всегда использовать встроенный файловый менеджер</string>
  <string name="pTitle_confirm_exitEditMode">Подтверждение выхода из конфигуратора</string>
  <string name="pSummary_confirm_exitEditMode">Спрашивать подтверждение при выходе из режима настройки редактирования станции</string>
  <string name="pTitle_internalSender">Встроенный проводник для сохранения</string>
  <string name="pSummary_internalSender">Использовать встроенный файловый менеждер для сохранения Sandbox\'ов</string>
  <string name="pTitle_updateDb">Обновление базы данных</string>
  <string name="pSummary_updateDb">Проверить наличие обновлений базы данных характеристик модулей</string>
  <string name="pTitle_updateApp">Обновление приложения</string>
  <string name="pSummary_updateApp">Проверить наличие более новой версии приложения</string>
  <string name="pTitle_language">Язык приложения (Language)</string>
  <string name="pTitle_feedback">Обратная связь</string>
  <string name="pTitle_about">О программе</string>
</resources>