<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="@dimen/dialogView_Padding">

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/createSandbox_tvText_name"
    android:textSize="@dimen/dialogView_textSizeMain"/>

  <EditText
    android:id="@+id/etSbxName"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="textNoSuggestions"
    android:text="@string/createSandbox_edDefault_name"/>

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/createSandbox_tvText_uid"
    android:textSize="@dimen/dialogView_textSizeMain"/>

  <EditText
    android:id="@+id/etSbxUid"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="number"
    android:hint="@string/createSandbox_edHint_uid"/>

  <CheckBox
    android:id="@+id/addStdMarkers"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/createSandbox_addStdMarkers"
    android:textSize="@dimen/dialogView_textSizeMain"
    android:visibility="gone"/>

</LinearLayout>