<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="@dimen/dialogView_Padding">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
      android:id="@+id/etText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textMultiLine"
      android:hint="@string/diaAddText_enterText"
      android:maxLines="5"/>

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/diaAddText_enterPosition"
      android:textSize="@dimen/dialogView_textSizeMain"/>

    <include
      layout="@layout/dialog_input_position"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diaAddText_selectAlign"
        android:textSize="@dimen/dialogView_textSizeMain"/>

      <Spinner
        android:id="@+id/alignSelector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dialogView_Padding"
        android:layout_marginStart="@dimen/dialogView_Padding"
        android:entries="@array/diaAddText_alignValues"/>
    </LinearLayout>

    <CheckBox
      android:id="@+id/cbAdvanced"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:text="@string/diaAddModule_advanced"
      android:textSize="@dimen/actSbx_textSizeMain"/>

    <LinearLayout
      android:id="@+id/advancedLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:visibility="gone">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diaAddText_margin"
        android:textSize="@dimen/actSbx_textSizeMain"/>

      <EditText
        android:id="@+id/etMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/actSbxEdit_valueFieldMargin"
        android:layout_marginRight="@dimen/actSbxEdit_valueFieldMargin"
        android:inputType="number|numberSigned"
        android:hint="@integer/addText_defaultMargin"
        android:ems="3"/>

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valueDots"
        android:textSize="@dimen/actSbx_textSizeMain"/>

    </LinearLayout>

  </LinearLayout>

</ScrollView>