<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dialogView_Padding">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
      android:id="@+id/etLabel"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textCapCharacters|textNoSuggestions"
      android:hint="@string/diaAddMarker_enterLabel"
      android:maxLength="3"/>

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/diaAddMarker_enterPosition"
      android:textSize="@dimen/dialogView_textSizeMain"/>

    <include
      layout="@layout/dialog_input_position"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>

    <CheckBox
      android:id="@+id/cbAdvanced"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:text="@string/diaAddModule_advanced"
      android:textSize="@dimen/actSbx_textSizeMain"/>

    <TableLayout
      android:id="@+id/advancedLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:visibility="gone">

      <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/diaAddMarker_enterObjRadius"
          android:textSize="@dimen/actSbx_textSizeMain"/>

        <EditText
          android:id="@+id/etObjRadius"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/actSbxEdit_valueFieldMargin"
          android:layout_marginStart="@dimen/actSbxEdit_valueFieldMargin"
          android:inputType="numberDecimal"
          android:hint="@integer/addMarker_defaultRadius"
          android:ems="3"/>
      </TableRow>

      <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/diaAddMarker_enterOrbRadius"
          android:textSize="@dimen/actSbx_textSizeMain"/>

        <EditText
          android:id="@+id/etOrbRadius"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/actSbxEdit_valueFieldMargin"
          android:layout_marginStart="@dimen/actSbxEdit_valueFieldMargin"
          android:inputType="numberDecimal"
          android:hint="@integer/addMarker_defaultRadius"
          android:ems="3"/>
      </TableRow>

      <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/diaAddMarker_enterRescaleRadius"
          android:textSize="@dimen/actSbx_textSizeMain"/>

        <EditText
          android:id="@+id/etRescaleRadius"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/actSbxEdit_valueFieldMargin"
          android:layout_marginStart="@dimen/actSbxEdit_valueFieldMargin"
          android:inputType="numberDecimal"
          android:hint="@integer/addMarker_defaultRadius"
          android:ems="3"/>
      </TableRow>

      <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/diaAddMarker_enterScale"
          android:textSize="@dimen/actSbx_textSizeMain"/>

        <EditText
          android:id="@+id/etScale"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/actSbxEdit_valueFieldMargin"
          android:layout_marginStart="@dimen/actSbxEdit_valueFieldMargin"
          android:inputType="numberDecimal"
          android:hint="@integer/addMarker_defaultScale"
          android:ems="3"/>
      </TableRow>

    </TableLayout>

  </LinearLayout>

</ScrollView>